# git-approve

./: .gitignore  README.md  pyproject.toml
.claude/skills/approve-gate/: SKILL.md
.claude/skills/commit-review/: SKILL.md
hooks/: _chain  pre-commit
nvim/: README.md
nvim/lua/git-approve/: init.lua
nvim/plugin/: git-approve.lua  git-approve.vim
src/git_approve/: __init__.py  cli.py  core.py  ledger.py
tests/: test_core.py
